# to-do

./: Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml
backend/: items_views.py  main.py  requirements.txt  requirementsWindows.txt  users_views.py
backend/api_v1/: __init__.py
backend/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  db_helper.py  product.py
backend/users/: crud.py  schemas.py  views.py
