[tool.poetry]
name = "to-do"
version = "0.1.0"
description = ""
authors = ["yoda <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydentic = {extras = ["all"], version = "^0.0.1.dev3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
